# MontelEQ

./: .gitignore  CLAUDE.md  README.md  databricks.yml
databricks/: README.md  databricks.yml
databricks/notebooks/: dispatcher.py  ingest_by_category.py  ingest_by_group.py  ingest_category.py  plan.py
notebooks/: ingest_by_category.py  ingest_by_data_type.py  plan.py
python/: curated_names.json  existing_curve_names.json  pyproject.toml
python/src/monteleq/: __init__.py  cli.py  model.py  pipeline.py  version.py
python/src/monteleq/api/: _base_client.py  client.py  curation_client.py  curation_helpers.py  events_client.py  metadata_client.py  request.py  schemas.py
python/tests/: conftest.py
python/tests/test_monteleq/: test_benchmark_pipeline.py  test_model.py
python/tests/test_monteleq/test_api/: test_client.py  test_curation.py  test_metadata.py  test_orchestration.py  test_request.py
